Add UI for viewing registry
